--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,5 +27,5 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
-      - run: make devinstall
+      - run: make mypyinstall
       - run: make typingtest
