--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,5 +27,5 @@ jobs:
           python-version: '3.13'
           activate-environment: true
           cache-dependency-glob: 'pyproject.toml'
-      - run: make mypyinstall
+      - run: make tyinstall
       - run: make typingtest
