--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,5 @@
-[tool.mypy]
-ignore_missing_imports = true
-show_column_numbers = true
-show_error_codes = true
-strict = true
-warn_return_any = true
-warn_unused_configs = true
+[tool.ty.rules]
+unresolved-attribute = 'ignore'
 
 [tool.ruff]
 line-length = 120
