Use uv run in make targets
Configure using local time-lapse repo.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,28 +4,11 @@ on:
   push:
 
 jobs:
-  rufftest:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
       - uses: astral-sh/setup-uv@v7
-        with:
-          python-version: '3.13'
-          activate-environment: true
-          cache-dependency-glob: 'requirements-ruff.txt'
-      - run: make ruffinstall
-      - run: make rufftest
+      - run: make test
         env:
           RUFF_FORMAT: github
-
-  typingtest:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: astral-sh/setup-uv@v7
-        with:
-          python-version: '3.13'
-          activate-environment: true
-          cache-dependency-glob: 'pyproject.toml'
-      - run: make tyinstall
-      - run: make typingtest
